# InvestmentHelper

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  build.sh  frontend-backend.md  main.py  pyproject.toml  requirements.txt  run.sh
hedgeye-tracker/: .env.example  CLAUDE.md  lambda_handler.py  pyproject.toml
hedgeye-tracker/deployment/: package-lambda.sh
hedgeye-tracker/infrastructure/: .gitignore  ENVIRONMENT-SWITCHING.md  NEXT-STEPS.md  README.md  backend.tf  current-env.sh  main.tf  outputs.tf  terraform.tfvars.example  use-dev.sh  use-prod.sh  use-staging.sh  variables.tf
hedgeye-tracker/infrastructure/bootstrap/: AWS-IAM-GUIDE.md  COPY-THIS-POLICY.json  README.md  backend-resources.tf  manual-setup.sh  setup.sh
hedgeye-tracker/src/: main.py  models.py
hedgeye-tracker/src/handlers/: database.py  gmail.py
hedgeye-tracker/src/services/: database_service.py  etf_update_service.py  gmail_service.py  price_ratio_calculator.py  risk_range_parser_service.py  (+4 more)
hedgeye-tracker/tests/: conftest.py  test_etf_update_service.py  test_symbol_mapping.py
price-fetcher/: .env.example  .gitignore  CLAUDE.md  README.md  debug_yf.py  lambda_handler.py  pyproject.toml  requirements-lambda.txt  requirements.txt
price-fetcher/config/: market_holidays.sample.json  validator_config.sample.json
price-fetcher/deployment/: .gitignore  package-lambda.sh
price-fetcher/fetchers/: __init__.py  api_keys.py  av_service.py  batch.py  config_service.py  db_service.py  fh_service.py  fmp_service.py  logging_config.py  main.py  models.py  rate_limit.py  sa_service.py  td_service.py  timeout.py  yf_service.py
price-fetcher/infrastructure/: ENVIRONMENT-SWITCHING.md  README.md  TROUBLESHOOTING.md  backend.tf  current-env.sh  main.tf  outputs.tf  use-dev.sh  use-prod.sh  use-staging.sh  variables.tf
price-fetcher/scripts/: fetch_holidays.py  fetch_prices.py  get_price.py  import_stockanalysis.py  import_watchlist_csv.py  migrate_holidays_to_dynamodb.py  migrate_watchlist.py  validate_prices.py
(+198 files in other folders)
