[project]
name = "hedgeye-tracker"
version = "0.1.0"
description = "Hedgeye risk range email parser and DynamoDB updater"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.70.0",
    "google-auth>=2.15.0",
    "google-auth-oauthlib>=0.7.1",
    "google-auth-httplib2>=0.1.0",
    "boto3>=1.26.0",
    "pynamodb>=6.0.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "moto[dynamodb]"]
